front: view login, back: settins class User

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,17 +1,1 @@
-<h1>Hello World!</h1>
-<section>
-  <div class="example-label">Raised</div>
-  <div class="example-button-row">
-    <button mat-fab extended>Basic</button>
-    <button mat-fab extended>Primary</button>
-    <button mat-fab extended>Accent</button>
-    <button mat-fab extended>Warn</button>
-    <button mat-fab extended disabled>Disabled</button>
-    <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
-<button mat-fab extended>
-  <mat-icon>home</mat-icon>
-  Home
-</button>
+<router-outlet></router-outlet>
