add controller service

--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div style="height: 100vh; display: flex; justify-content: center; align-items: center;">
+<!-- <div style="height: 100vh; display: flex; justify-content: center; align-items: center;">
     <div class="example-container" style="display: flex; flex-direction: column; width: 300px; border: 1px solid black; border-radius: 15px; padding: 1rem;">
       <h1>Login</h1>
       <mat-form-field>
@@ -15,4 +15,6 @@
       <p>Erro</p>
       <button mat-flat-button color="primary" (click)="Login()">Login</button>
     </div>
-  </div>
+  </div> -->
+
+<button (click)="googleSignIn()">login</button>
