--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -18,3 +18,6 @@
   </div> -->
 
 <button (click)="googleSignIn()">login</button>
+<div class="card flex justify-center mt-4">
+  <p-button label="Check" />
+</div>
