add controller (create user), model, service, table User,

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,11 +1,11 @@
-<p-panel>
+<!--<p-panel>
     <div class="flex gap-4 items-center justify-center">
         <p-image src="assets/logo.jpg" alt="Image" width="100" class="h-[100px]"/>
         <h2 class="text-center">Dety Frediani Beleza e Estética</h2>
     </div>
 </p-panel>
 
-<!-- <div class="card">
+<div class="card">
     <p-carousel [value]="professionals?.dados" [numVisible]="3" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions">
         <ng-template let-professional #item>
             <div class="border border-surface rounded-border m-2 p-4">
@@ -27,3 +27,4 @@
         </ng-template>
     </p-carousel>
 </div> -->
+<h1>Hello world!</h1>
