--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,30 +1,82 @@
-<!--<p-panel>
+<p-panel>
     <div class="flex gap-4 items-center justify-center">
-        <p-image src="assets/logo.jpg" alt="Image" width="100" class="h-[100px]"/>
+        <p-image src="assets/logo.jpg" alt="Image" width="100" class="h-[100px]" />
         <h2 class="text-center">Dety Frediani Beleza e Estética</h2>
     </div>
 </p-panel>
 
 <div class="card">
-    <p-carousel [value]="professionals?.dados" [numVisible]="3" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions">
-        <ng-template let-professional #item>
-            <div class="border border-surface rounded-border m-2 p-4">
-                <div class="mb-4">
-                    <div class="relative mx-auto">
-                        <img src="https://primefaces.org/cdn/primeng/images/demo/product/{{ product.image }}" [alt]="product.name" class="w-full rounded-border" />
-                        <p-tag [value]="professionals." [severity]="getSeverity(product.inventoryStatus)" class="absolute" [ngStyle]="{ 'left.px': 5, 'top.px': 5 }" />
+    <p-stepper [value]="1">
+        <p-step-item [value]="1">
+            <p-step>Agendamento</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-80" style="padding: 0.3rem;">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex flex-col justify-center items-center font-medium">
+                            <div>
+                                <h2>Selecione um profissional:</h2>
+                                <div class="flex">
+                                    <p-avatar *ngFor="let item of professionals?.dados"
+                                        image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
+                                        class="mr-2 flex flex-col-reverse" size="xlarge" shape="circle"
+                                        ariaLabel="Teste">
+                                        <p class="font-bold" style="font-size: 0.8rem;">{{ item.nome}}</p>
+                                    </p-avatar>
+                                </div>
+                            </div>
+                            <!-- <div>
+                                <h2>Selecione uma data:</h2>
+                                <div class="flex">
+                                    <div *ngFor="let item of professionals?.dados" class="">{{ item.nome }}</div>
+                                </div>
+                            </div> -->
+                        </div>
                     </div>
-                </div>
-                <div class="mb-4 font-medium">{{ professionals?.dados.nome }}</div>
-                <div class="flex justify-between items-center">
-                    <div class="mt-0 font-semibold text-xl">{{ '$' + product.price }}</div>
-                    <span>
-                        <p-button icon="pi pi-heart" severity="secondary" [outlined]="true" />
-                        <p-button icon="pi pi-shopping-cart" styleClass="ml-2" />
-                    </span>
-                </div>
-            </div>
-        </ng-template>
-    </p-carousel>
-</div> -->
-<h1>Hello world!</h1>
+                    <div class="py-6">
+                        <p-button class="margin-button" label="Próximo" (onClick)="activateCallback(2)" />
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
+
+        <p-step-item [value]="2">
+            <p-step>Cadastro rápido</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-90">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
+                        <p-button class="margin-button" label="Voltar" severity="secondary"
+                            (onClick)="activateCallback(1)" />
+                        <p-button class="margin-button" label="Próximo" (onClick)="activateCallback(3)" />
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
+
+        <p-step-item [value]="3">
+            <p-step>Concluir</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-90">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            Content III
+                        </div>
+                    </div>
+                    <div class="py-6">
+                        <p-button class="margin-button" label="Voltar" severity="secondary"
+                            (onClick)="activateCallback(2)" />
+                        <p-button class="margin-button" label="Concluir" severity="secondary"
+                            (onClick)="activateCallback(2)" />
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
+    </p-stepper>
+</div>
