--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -19,25 +19,43 @@
                                 <div>
                                     <p-avatar *ngFor="let item of professionals?.dados"
                                         image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
-                                        class="mr-2 flex flex-col-reverse" size="xlarge" shape="circle"
-                                        ariaLabel="Teste" (click)="buscarDiasDisponiveis()">
-                                        <p class="font-bold" style="font-size: 0.8rem;">{{ item.nome}}</p>
+                                        class="mr-2 flex flex-col-reverse cursor-pointer" size="xlarge" shape="circle"
+                                        ariaLabel="Teste" (click)="buscarDiasDisponiveis(item.id)" [ngClass]="{
+                                        'opacity-100': item.id === profissionalSelecionadoId,
+                                        'opacity-40 grayscale': item.id !== profissionalSelecionadoId
+                                    }">
+                                        <p class="font-bold" style="font-size: 0.8rem;">{{ item.nome }}</p>
                                     </p-avatar>
+
                                 </div>
                             </div>
-                            <div class="mt-8!" *ngIf="dayWithTimesFiltrados.length > 0">
-                                <h2>Selecione um dia:</h2>
-                                <div class="card flex justify-center">
-                                    <p-datepicker [(ngModel)]="date" (onSelect)="mudarMes()" view="month" dateFormat="mm/yy" [readonlyInput]="true" />
+                            <div class="mt-4!" *ngIf="dayWithTimesFiltrados.length > 0">
+                                <div *ngIf="day == undefined else comDiaSelecionado">
+                                    <div class="card flex gap-2">
+                                        <h2>Selecione uma data:</h2>
+                                        <p-datepicker class="w-[120px]!" [(ngModel)]="date" (onSelect)="mudarMes()"
+                                            view="month" dateFormat="mm/yy" [readonlyInput]="true" />
+                                    </div>
+                                    <div class="flex flex-wrap gap-2">
+                                        <p-button severity="secondary" *ngFor="let item of dayWithTimesFiltrados"
+                                            [label]="item.day.toString()" (click)="diaSelecionado(item.day)" />
+                                    </div>
                                 </div>
-                                <div class="flex flex-wrap gap-2">
-                                    <p-button *ngFor="let item of dayWithTimesFiltrados" [label]="item.day.toString()" />
-                                </div>
+                                <ng-template #comDiaSelecionado>
+                                    <h2>Selecione um horário:</h2>
+                                    <div class="flex flex-wrap gap-2">
+                                        <p-button *ngFor="let horario of horariosDoDiaSelecionado" severity="secondary"
+                                            [label]="horario" (onClick)="selecionarHorario(horario)"></p-button>
+                                    </div>
+                                </ng-template>
                             </div>
                         </div>
                     </div>
-                    <div class="py-6">
-                        <p-button class="margin-button" label="Próximo" (onClick)="activateCallback(2)" />
+                    <div class="flex py-6 gap-2">
+                        <p-button *ngIf="day !== undefined" class="margin-button" label="Voltar" severity="secondary"
+                            (onClick)="voltar()" />
+                        <p-button class="margin-button" label="Próximo" (onClick)="activateCallback(2)"
+                            [disabled]="horario == undefined" />
                     </div>
                 </ng-template>
             </p-step-panel>
