--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -34,7 +34,7 @@
                                     <div class="card flex gap-2">
                                         <h2>Selecione uma data:</h2>
                                         <p-datepicker class="w-[120px]!" [(ngModel)]="date" (onSelect)="mudarMes()"
-                                            view="month" dateFormat="mm/yy" [readonlyInput]="true" />
+                                            view="month" dateFormat="mm/yy" [minDate]="minMonth" [readonlyInput]="true" />
                                     </div>
                                     <div class="flex flex-wrap gap-2">
                                         <p-button severity="secondary" *ngFor="let item of dayWithTimesFiltrados"
