--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -9,9 +9,9 @@
     <p-stepper [value]="1">
         <p-step-item [value]="1">
             <p-step>Agendamento</p-step>
-            <p-step-panel>
+            <p-step-panel style="max-height: 570px;">
                 <ng-template #content let-activateCallback="activateCallback">
-                    <div class="flex flex-col h-100" style="padding: 0.3rem;">
+                    <div class="flex flex-col h-100" style="padding: 0.3rem; height: 100%;">
                         <div
                             class="p-4! border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex flex-col justify-start items-left font-medium">
                             <div>
@@ -50,12 +50,12 @@
                                 </ng-template>
                             </div>
                         </div>
-                    </div>
-                    <div class="flex py-6 gap-2">
-                        <p-button *ngIf="day !== undefined" class="margin-button" label="Voltar" severity="secondary"
-                            (onClick)="voltar()" />
-                        <p-button class="margin-button" label="Próximo" (onClick)="activateCallback(2)"
-                            [disabled]="horario == undefined" />
+                        <div class="flex gap-2">
+                            <p-button *ngIf="day !== undefined" class="margin-button" label="Voltar" severity="secondary"
+                                (onClick)="voltar()" />
+                            <p-button *ngIf="day !== undefined || horariosDoDiaSelecionado !== undefined" class="margin-button" label="Próximo" (onClick)="activateCallback(2)"
+                                [disabled]="horario == undefined" />
+                        </div>
                     </div>
                 </ng-template>
             </p-step-panel>
